--- a/RestaurantWebsiteService/src/main/resources/application.properties
+++ b/RestaurantWebsiteService/src/main/resources/application.properties
@@ -5,16 +5,16 @@ server.port=7060
 management.endpoints.web.exposure.include=*
 
 # Mac/Linux info for MySQL login
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb
+# spring.datasource.username=root
+# spring.datasource.password=Root@123
+
+# Windows info for MySQL login
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb
 spring.datasource.username=root
-spring.datasource.password=Root@123
-
-# Windows info for MySQL login
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/spring_db
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.password=root
 
 # Shows logs for the queries hibernate uses for our interactions with our database
 spring.jpa.show-sql=true
